--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,15 @@ uuid = "6d72f4e6-0ed6-45a8-9268-ca10853c051d"
 authors = ["mschauer <moritzschauer@web.de> and contributors"]
 version = "0.1.0"
 
+[deps]
+DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
+DiffEqNoiseProcess = "77a26b50-5914-5dd7-bc55-306e6241c503"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
+
 [compat]
 julia = "1"
 
