--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 Mitosis = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
