--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,9 @@ UnPack = "0.1, 1.0"
 julia = "1"
 
 [extras]
+DiffEqSensitivity = "41bf760c-e81c-5289-8e54-58b1f1f8abe2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["Test"]
+test = ["DiffEqSensitivity", "Test", "Zygote"]
