--- a/example/phylo/Project.toml
+++ b/example/phylo/Project.toml
@@ -8,4 +8,6 @@ Mitosis = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
 MitosisStochasticDiffEq = "6d72f4e6-0ed6-45a8-9268-ca10853c051d"
 NewickTree = "b0a14db8-6308-4ebc-8917-f72cd81f5094"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
