allow matrix valued diffusion process

--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 Mitosis = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
@@ -24,6 +25,7 @@ ForwardDiff = "0.10"
 MeasureTheory = "0.2, 0.3, 0.4, 0.5, 0.6"
 Mitosis = "0.2"
 OrdinaryDiffEq = "5.50"
+PaddedViews = "0.5"
 RecursiveArrayTools = "2.11"
 SciMLBase = "1.8"
 StaticArrays = "1.0"
