--- a/Project.toml
+++ b/Project.toml
@@ -35,8 +35,9 @@ julia = "1"
 
 [extras]
 DiffEqSensitivity = "41bf760c-e81c-5289-8e54-58b1f1f8abe2"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["DiffEqSensitivity", "Test", "Zygote"]
+test = ["DiffEqSensitivity", "SparseArrays", "Test", "Zygote"]
