--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,12 @@
 name = "MitosisStochasticDiffEq"
 uuid = "6d72f4e6-0ed6-45a8-9268-ca10853c051d"
 authors = ["Frank Schaefer <frank.schaefer@unibas.ch>, Moritz Schauer <moritzschauer@web.de> and contributors"]
-version = "0.2.0"
+version = "0.2.1"
 
 [deps]
 DiffEqNoiseProcess = "77a26b50-5914-5dd7-bc55-306e6241c503"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
-Mitosis = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 PaddedViews = "5432bcbf-9aad-5242-b902-cca2824c8663"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -16,28 +14,18 @@ RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 SciMLBase = "0bca4576-84f4-4d90-8ffe-ffa030f20462"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-DiffEqNoiseProcess = "5.6"
-ForwardDiff = "0.10"
-MeasureTheory = "0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.10, 0.12"
-Mitosis = "0.2"
-OrdinaryDiffEq = "5.50"
-PaddedViews = "0.5"
-RecursiveArrayTools = "2.11"
-SciMLBase = "1.8"
-StaticArrays = "1.0"
-StochasticDiffEq = "6.32"
-UnPack = "0.1, 1.0"
 julia = "1"
 
 [extras]
-DiffEqSensitivity = "41bf760c-e81c-5289-8e54-58b1f1f8abe2"
+SciMLSensitivity = "41bf760c-e81c-5289-8e54-58b1f1f8abe2"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [targets]
-test = ["DiffEqSensitivity", "SparseArrays", "Test", "Zygote"]
+test = ["SciMLSensitivity", "SparseArrays", "Test", "Zygote"]
